--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -8,11 +8,25 @@
         <style>
             body {
                 margin: 0;
-                padding: 0;
-                font-size: 30px;
+                padding: 40px;
+                font-size: 20px;
+                font-family: monospace;
             }
             h1,h2,h3,h4,h5,h6 {
-                font-family: 'Droid Sans';
+            }
+            h1 {
+                margin: 20px 0;
+            }
+            p {
+                margin: 10px 0;
+            }
+            .left {
+                float: left;
+                width: 50%;
+            }
+            .right {
+                float: right;
+                width: 50%;
             }
         </style>
     </head>
