--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -6,28 +6,73 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
             body {
                 margin: 0;
-                padding: 40px;
-                font-size: 20px;
                 font-family: monospace;
-            }
-            h1,h2,h3,h4,h5,h6 {
+                background-color: black;
             }
             h1 {
-                margin: 20px 0;
+                font-size: 40px;
+                margin-bottom: 16px;
             }
-            p {
+            .img-container {
+                border: 1px solid black;
+            }
+            img {
+                width: 100%;
+                display: block;
+            }
+            p.node-text {
+                font-size: 24px;
                 margin: 10px 0;
             }
-            .left {
-                float: left;
-                width: 50%;
+            .wrapper {
+                background-color: white;
+                width: 100%;
+                margin: 0 auto;
+                max-width: 642px;
             }
-            .right {
-                float: right;
-                width: 50%;
+            .container {
+                padding: 8px;
+                margin: 0 auto;
+                max-width: 642px;
             }
+
+            .choice {
+                border: 1px solid black;
+            }
+
+            .choice a {
+                font-style: italic;
+                line-height: 30px;
+                height: 30px;
+                padding: 10px 0px;
+                display: block;
+                text-align: center;
+                font-size: 24px;
+                text-decoration: none;
+                color: black;
+            }
+            .choice a:hover {
+                background-color: black;
+                color: white;
+            }
+
+                .choice {
+                    border: 1px solid black;
+                    margin-bottom: 8px;
+                }
+                .choice-a {
+                }
+                .choice-b {
+                }
+                .choice a {
+                    width: 100%;
+                }
         </style>
     </head>
     <body>
