--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -34,12 +34,12 @@
                 background-color: white;
                 width: 100%;
                 margin: 0 auto;
-                max-width: 642px;
+                max-width: 658px;
             }
             .container {
                 padding: 8px;
                 margin: 0 auto;
-                max-width: 642px;
+                max-width: 658px;
             }
 
             .choice {
@@ -74,6 +74,7 @@
                     width: 100%;
                 }
         </style>
+        <script src="//cdn.jsdelivr.net/velocity/1.0.0/velocity.min.js"></script>
     </head>
     <body>
         <div id="app">
