--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Binary Story</title>
+        <title>Employee of the Month: A Binary Story</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -16,15 +16,27 @@
                 background-color: black;
             }
             h1 {
-                font-size: 40px;
+                font-size: 32px;
                 margin-bottom: 16px;
             }
             .img-container {
                 border: 1px solid black;
+                position: relative;
+            }
+            .img-filter {
+                width: 100%;
+                height: 100%;
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 0;
+                background-image: url(/filter1.png);
+                background-size: 100%;
             }
             img {
                 width: 100%;
                 display: block;
+                height: 100%;
             }
             p.node-text {
                 font-size: 24px;
